--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "globalthis": "^1.0.3",
+    "higlass": "^1.13.2",
     "pinia": "^2.1.7",
-    "vue": "^3.3.4"
+    "vue": "^3.2.36"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
