--- a/package.json
+++ b/package.json
@@ -10,16 +10,20 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "element-plus": "^2.4.2",
+    "element-ui": "^2.15.14",
     "pinia": "^2.1.7",
     "vue": "^3.3.4"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
-    "@vitejs/plugin-vue": "^4.4.0",
+    "@vitejs/plugin-vue": "^4.4.1",
     "@vue/eslint-config-prettier": "^8.0.0",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
     "prettier": "^3.0.3",
+    "unplugin-auto-import": "^0.16.7",
+    "unplugin-vue-components": "^0.25.2",
     "vite": "^4.4.11"
   }
 }
