--- a/package.json
+++ b/package.json
@@ -10,18 +10,22 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "element-plus": "^2.4.2",
-    "element-ui": "^2.15.14",
     "pinia": "^2.1.7",
     "vue": "^3.3.4"
   },
   "devDependencies": {
+    "@iconify-json/tabler": "^1.1.96",
     "@rushstack/eslint-patch": "^1.3.3",
+    "@unocss/preset-attributify": "^0.57.4",
+    "@unocss/preset-icons": "^0.57.4",
+    "@unocss/preset-uno": "^0.57.4",
+    "@unocss/transformer-directives": "^0.57.4",
     "@vitejs/plugin-vue": "^4.4.1",
     "@vue/eslint-config-prettier": "^8.0.0",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
     "prettier": "^3.0.3",
+    "unocss": "^0.57.4",
     "unplugin-auto-import": "^0.16.7",
     "unplugin-vue-components": "^0.25.2",
     "vite": "^4.4.11"
